<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="textViewAppLabel">Body Mass Index Calculator</string>
    <string name="textViewHeight">Enter height:</string>
    <string name="editTextHeight">meters</string>
    <string name="textViewWeight">Enter weight:</string>
    <string name="textViewBMILabel">My BMI:</string>
    <string name="textViewCategoryLabel">Category:</string>
    <string name="editTextWeight">kilos</string>
    <string name="buttonFindBMI">Find my BMI</string>
    <string name="buttonClearFields">Clear</string>
    <string name="categoryUnderweight">Underweight</string>
    <string name="categoryNormal">Normal</string>
    <string name="categoryOverweight">Overweight</string>
    <string name="categoryObese">Obese</string>
    <string name="toast_enter_height">Enter Height!</string>
    <string name="toast_enter_weight">Enter Weight!</string>
    <string name="toast_enter_correct_height">Enter Correct Height!</string>
    <string name="toast_enter_correct_weight">Enter Correct Weight!</string>
</resources>