...
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewBMILabel"
        app:layout_constraintStart_toStartOf="@+id/textViewBMILabel"
        app:layout_constraintTop_toBottomOf="@+id/textViewBMILabel" />

    <TextView
        android:id="@+id/textViewCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewCategoryLabel"
        app:layout_constraintEnd_toEndOf="@+id/textViewBMI"
        app:layout_constraintStart_toStartOf="@+id/textViewBMI"
        app:layout_constraintTop_toTopOf="@+id/textViewCategoryLabel" />

    <TextView
        android:id="@+id/textViewBMI"
        android:layout_width="wrap_content"
...
